wdl-analysis/tests/validation/missing-call-input-unsupported/source.errors
error: unknown task or workflow `foo`
  ┌─ tests/validation/missing-call-input-unsupported/source.wdl:6:10
  │
6 │     call foo { foo = bar }
  │          ^^^

warning[UnusedCall]: unused call `foo`
  ┌─ tests/validation/missing-call-input-unsupported/source.wdl:6:10
  │
6 │     call foo { foo = bar }
  │          ^^^

error: unknown name `bar`
  ┌─ tests/validation/missing-call-input-unsupported/source.wdl:6:22
  │
6 │     call foo { foo = bar }
  │                      ^^^

